Added Length Input to set length of the password

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ h1, h3, div, button, p, input {
 .container {
     max-width: 550px;
     margin: 50px auto 50px;
-    padding: 115px 52px;
+    padding: 52px 52px;
     background: #1F2937;
 }
 
@@ -35,7 +35,7 @@ h3 {
     font-weight: 400;
     line-height: 28px;
     color: #D5D4D8;
-    margin-bottom: 51px;
+    margin-bottom: 20px;
 }
 
 .highlight {
@@ -53,6 +53,8 @@ button {
     line-height: 24px;
     border: none;
     margin-bottom: 35px;
+  
+    display: block;
 }
 
 .description {
@@ -62,16 +64,43 @@ button {
 
 .generated-passwords {
     display: flex;
+    flex-wrap: wrap;
     gap: 24px;
 }
 
 .password-field {
-    flex-basis: 100%;
+    flex: 1 0 auto;
+    min-width: 35%;
     background: #273549;
-    height: 39px;
+    min-height: 39px;
     border-radius: 6px;
     color: #55F991;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 4px 16px;
+}
+
+label {
+    color: #D5D4D8;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.75rem; /* 175% */
+    margin-right: 16px;
+}
+
+input {
+    background: #273549;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    width: 75px;
+    height: 39px;
+    text-align: center;
+    margin-bottom: 20px;;
+}
+
+input::placeholder {
+    color: rgba(213, 212, 216, 0.30);
 }
